# ProyectoABP-TiendaInformatica

./: README.md
TiendaInformatica/: planificacion_de_trabajo.txt
TiendaInformatica/TiendaInformatica/: README.md  pyproject.toml
TiendaInformatica/TiendaInformatica/tiendainformatica/: main.py
TiendaInformatica/TiendaInformatica/tiendainformatica/colecciones/: finanzas.json  productos.json  salida.txt  tareas.json
TiendaInformatica/TiendaInformatica/tiendainformatica/data/: pedidos.json  productos.json  usuarios.json
TiendaInformatica/TiendaInformatica/tiendainformatica/models/: usuario_model.py
TiendaInformatica/TiendaInformatica/tiendainformatica/services/: crud_operations.py  mongo_service.py  query_operations.py
TiendaInformatica/TiendaInformatica/tiendainformatica/utils/: componentes.py  custom_button.py  custom_drop_down.py  custom_input.py  hash.py  input_custom.py
TiendaInformatica/TiendaInformatica/tiendainformatica/views/: main_view.py  panel_view.py  panel_view_cliente.py  panel_view_consultasgenerales.py  panel_view_empleado.py  panel_view_insertar.py  panel_view_modificar.py  panel_view_pago.py
